Fix style on mobile

--- a/pages/posts/Blog.module.scss
+++ b/pages/posts/Blog.module.scss
@@ -65,6 +65,10 @@
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
+
+  @include tabletPortrait {
+    justify-content: center;
+  }
 }
 
 .postContent {
